# lowcode_platform_datascience

./: .env  README.md  pyproject.toml  test.html
app/: 1.py  chatGLM.py  config.py  main.py  test.py
static/: 1og7hw98f.json  2sdtsvfzz.json  4ti7ejyml.json  8304hmhu3.json  8flb1wipm.json  gx0va88nw.json
tasks/dict/: 08a4v7ijr.json  1ccmz4o8a.json  1t2o7bbhv.json  24626tes5.json  393y4s0hz.json  4qqm1100a.json  5mz5gt9yp.json  86ijv2d53.json  8ly7dgjhg.json  8ofgamy5j.json  8ou5thcpa.json  9ci0bdsyy.json  9puihsmjk.json  aajlyn7l7.json  d9o6lgslz.json  dfwxnrysb.json  ejprkb8k6.json  et69cfhnz.json  ev22sk8vx.json  fe0ui6u8o.json  gqnsw51ss.json  gx69f6kld.json  h66j1v1i9.json  iiep4ykvt.json  j9g91tvp6.json  l6xnv6vge.json  ltij29br2.json  ncdqgwlj9.json  nn13yneut.json  o7gfrzje9.json  pamc2c8bt.json  ppupxpyl4.json  q7rmn1txm.json  uqsi74k4n.json  v5sgkb8lm.json  y1rfgnqg9.json  yt34x5944.json
tasks/input/: 8ofgamy5j.xlsx  8ou5thcpa.xlsx  y1rfgnqg9.xlsx
tasks/output/: 08a4v7ijr.xlsx  1t2o7bbhv.xlsx  24626tes5.xlsx  393y4s0hz.xlsx  (+13 more)
uploadImages/: 197vhk6oe.json  197vhk6oe.xlsx  5bxwokkxw.json  5bxwokkxw.xlsx  5zhob4nf1.json  6wdyj9kjv.xlsx  8dcn7hmfi.xlsx  9tnk1rsp8.xlsx  ceb450dca.json  dcxibil44.xlsx  f022oupea.json  f022oupea.xlsx  fu2288hpv.xlsx  gbvm7zshx.json  gbvm7zshx.xlsx  hdr8gws2g.json  hdr8gws2g.xlsx  i5asb7sid.xlsx  jqf9lserw.json  jqf9lserw.xlsx  njf5g1n4k.xlsx  nyavira1r.json  nyavira1r.xlsx  of8zneyqu.json  of8zneyqu.xlsx  rsyxenrih.json  rsyxenrih.xlsx  sf9ub3k6i.xlsx  xmbn09u1y.json  za3wje0wo.xlsx
web/: package.json  pnpm-lock.yaml
(+6 files in other folders)
